--- a/styles.css
+++ b/styles.css
@@ -193,6 +193,7 @@ nav ul li a:hover::after {
 }
 
 /* About Section */
+
 .about{
     margin: 70px;
     display: flex;
@@ -208,7 +209,7 @@ nav ul li a:hover::after {
     width: 90%;
     border-radius: 30px;
     background-color: var(--gray);
-    height: 350px;
+    /* height: 350px; */
 }
 .container_devs>img{
     width: 40%;
@@ -267,6 +268,12 @@ nav ul li a:hover::after {
     background-color: var(--primary);
     color: var(--light);
 }
+.about_ciudad{
+    margin-top: 20px;
+}
+/* .container_devs:hover img{
+    transform: scale(1.1);
+} */
 
 
 /* Services Section */
@@ -637,5 +644,30 @@ footer {
     .hero .btn{
         margin: 20px auto;
     }
-    
+    /* About me */
+    .container_devs{
+        flex-direction: column;
+    }
+    .container_devs img{
+        border-radius: 30px 30px 0px 0px;
+        width: 100%;
+    }
+    .cont_info{
+        width: 100%;
+    }
+    .about{
+        margin: 30px 30px;
+        display: flex;
+        flex-direction: column;
+    }
+    .about h2{
+        margin:30px auto;
+    }
+    .container_devs{
+        margin: auto;
+    }
+    .container_devs p{
+        /* text-align: justify; */
+        margin: 0px 10px;
+    }
 }
